fixed a little layout issue

--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -2,3 +2,8 @@
 #check-box-bottom {
   padding-top:0;
 }
+
+#agreement_new_account {
+  height:10px;
+  width:10px;
+}
